--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -21,14 +21,17 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
-      - name: Upload artifact
+
+      - name: Upload artifact (dist folder)
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'dist'  # Change this to point to your dist folder
+          path: 'dist'  # Ensure only dist folder is uploaded
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
